--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/syle.css" />
     <title>Document</title>
   </head>
   <body>
     <div>
       <ul class="menu">
         <div id="namesMenu">
-          <li><a href="#" class="active">Display games</a></li>
+          <li><a href="#" class="active">Categorias</a></li>
           <li><a href="#">Notícias</a></li>
           <li><a href="#">Jogos</a></li>
           <li><a href="#">inscreva-se</a></li>
@@ -18,12 +18,13 @@
       </ul>
     </div>
     <main>
+      //não pode colocar mais de um elemento com o mesmo ID//
       <section id="table">
         <div>
           <h1>Última Notícias</h1>
         </div>
         <div>
-          <h2>Titulo Princial da Notícia</h2>
+          <h2 class="cor-laranja">Titulo Princial da Notícia</h2>
           <h3>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
             vitae ducimus aperiam.
@@ -91,7 +92,7 @@
       </div>
       <div>
         <h2>Jogos</h2>
-        <div>
+        <div class="card">
           <ul>
             <li><img src="img/image 25 (1).png" alt="" /></li>
             <li><h3>Horizon Forbidden West</h3></li>
@@ -99,7 +100,7 @@
             <li><h2>9.7</h2></li>
           </ul>
         </div>
-        <div>
+        <div class="card">
           <ul>
             <li><img src="img/image 25 (1).png" alt="" /></li>
             <li><h3>Horizon Forbidden West</h3></li>
